--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
     <div class="row">
       <div class="col-lg-6 text-center">
-        <img class="img-fluid" src="img/2.png" alt="">
+        <img class="img-fluid" src="./img/2.png" alt="">
         <div class="img-caption text">
           <p class="text-muted">Built a fully functional web-interface for an optical character recognition software for
             a class project.
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="col-lg-6 text-center">
-        <img class="img-fluid" src="img/3.png" alt="">
+        <img class="img-fluid" src="./img/3.png" alt="">
         <div class="img-caption text">
           <p class="text-muted">Made a personal website using the Bootstrap framework. Source code available on <a target="_blank"
               href="https://www.github.com/breellz/myweb">github</a></p>
@@ -178,7 +178,7 @@
   <footer>
     <div class="col text-center" id="footer">
       <div class="row-md text-center">
-        <img src="img/1.jpg" alt="my image" id="mypic">
+        <img src="./img/1.jpg" alt="my image" id="mypic">
       </div>
     </div>
     <div id="social">
@@ -191,8 +191,6 @@
   </footer>
   <script src="./jquery/jquery-3.4.1.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/jqBootstrapValidation.js"></script>
-  <script src="./js/contact_me.js"></script>
 
 </body>
 
