--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
   </footer>
   <script src="./jquery/jquery-3.4.1.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/index.js"></script>
 
 </body>
 
