--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Owolabi Bassit</title>
+  <title>Owolabi Bassit: Front End Developer</title>
 </head>
 
 <body>
+
   <!--navigation-->
 
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
@@ -54,7 +55,7 @@
   <header id="home">
     <p id="welcome">WELCOME TO MY WEBSITE!</p>
     <P id="intro">I'm Owolabi Bassit</P>
-    <p> a front-end developer</P>
+    <p id="intro-loader">front-end developer</p>
     <button onclick= "window.location.href='#contact'" class="btn btn-primary btn-xl text-uppercase button">HIRE
       ME</button>
   </header>
@@ -165,7 +166,7 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase button" type="submit">Send
+                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase button" type="button" data-target="#prompt" data-toggle="modal">Send
                   Message</button>
               </div>
             </div>
@@ -174,6 +175,29 @@
       </div>
     </div>
   </section>
+
+  
+  <div id="prompt" class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">FEEDBACK!</h5>
+            <button class="button" class="close" data-dismiss="modal" aria-label="close">
+              <span aria-hidden="true" class="btn">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <h3>Your message has been successfully sent</h3>
+                <h6>Thanks for contacting me. I'll get back to you soon</h6>
+              </div>
+            </form>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <footer>
     <div class="col text-center" id="footer">
@@ -189,9 +213,10 @@
     </div>
 
   </footer>
+  <script src="./js/index.js"></script>
   <script src="./jquery/jquery-3.4.1.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/index.js"></script>
+  
 
 </body>
 
