--- a/index.html
+++ b/index.html
@@ -110,16 +110,15 @@
       <div class="col-lg-6 text-center">
         <img class="img-fluid" src="./img/2.png" alt="">
         <div class="img-caption text">
-          <p class="text-muted">Built a fully functional web-interface for an optical character recognition software for
-            a class project.
-            Source code avaialable on <a target="_blank" href="https://www.github.com/breellz/Mat213-OCR-web-interface">github</a></p>
+          <p class="text-muted">Built a fully functional web-interface for an optical character recognition software.
+            Source code avaialable on <a target="_blank" href="https://github.com/breellz/ocr-web-Interface">github</a> or <a target="_blank" href="https://breellz.github.io/ocr-web-Interface">view website</a></p>
         </div>
       </div>
       <div class="col-lg-6 text-center">
         <img class="img-fluid" src="./img/3.png" alt="">
         <div class="img-caption text">
           <p class="text-muted">Made a personal website using the Bootstrap framework. Source code available on <a target="_blank"
-              href="https://www.github.com/breellz/myweb">github</a></p>
+              href="https://www.github.com/breellz/web-dev-101-challenge">github</a> or <a target="_blank" href="https://breellz.github.io/web-dev-101-challenge">view website</a></p>
         </div>
       </div>
     </div>
